src/test/deca/context/valid/extensions/arraylit.deca

{
    int[][] x = {{1,2}, {1,2}};

    int[][][] y = {{{1}, {1}}, {{3}, {5}}};

}