src/test/deca/context/invalid/extension/array_literal_not_same2.deca
// Elements of array literal are not all of the same type
// Description : Test with literal not all the same between sub literal
// Result : error line 8



{
    int[][] x = {{1,2}, {1}};
}